--- a/HappyBirthday/app/src/main/res/values/strings.xml
+++ b/HappyBirthday/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Happy Birthday</string>
     <string name="no">no</string>
+    <string name="roll">roll</string>
 </resources>
