--- a/HappyBirthday/app/src/main/res/values/strings.xml
+++ b/HappyBirthday/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Happy Birthday</string>
     <string name="no">no</string>
     <string name="roll">roll</string>
+    <string name="todo">TODO</string>
 </resources>
