Change name of project and addTipTimeActivity

--- a/HappyBirthday/app/src/main/res/values/strings.xml
+++ b/HappyBirthday/app/src/main/res/values/strings.xml
@@ -6,4 +6,8 @@
     <string name="hello_world">Hello,world!</string>
     <string name="textview">TextView</string>
     <string name="lemon">TODO</string>
+    <string name="tip_amount">Tip Amount: %s</string>
+    <string name="okay_15">Okay (15%)</string>
+    <string name="good_18">Good (18%)</string>
+    <string name="amazing_20">Amazing (20%)</string>
 </resources>
